--- a/css/styles.css
+++ b/css/styles.css
@@ -98,6 +98,14 @@ a{
  		url('font/UVNBucThu.ttf') format('truetype'),
  		url('font/UVNBucThu.woff') format('woff');
 }
+@font-face {
+	font-family: 'VLAngelline';
+	src: url('font/VLAngelline.eot');
+	src: url('font/VLAngelline.eot?#iefix') format('embedded-opentype'),
+ 		url('font/VLAngelline.svg') format('svg'),
+ 		url('font/VLAngelline.ttf') format('truetype'),
+ 		url('font/VLAngelline.woff') format('woff');
+}
 /* close commented backslash hack */
 /**************** MAIN************/
 /*.container-header{
@@ -108,13 +116,17 @@ a{
 }
 #logo{
 	height: 100px;
+	padding-top: 10px;
 }
 #logo1{
+	margin-top: 5px;
+	font-family: 'VLAngelline';
 	font-size: 30px;
 	color: white;
     text-shadow: 9px 3px 2px black, 0 0 30px blue, 0 0 30px darkblue;
     padding-left: 30px;
     padding-top: auto;
+    text-decoration: none;
 }
 #logo2{
 	float: left;
@@ -192,5 +204,6 @@ a{
 .p2 {
 	font-family: 'UVNBucThu';
 	color: blue;
-	font-size: 25px;
+	font-size: 55px;
+	text-align: center;
 }
