--- a/css/styles.css
+++ b/css/styles.css
@@ -197,8 +197,8 @@ a{
 }
 .p1 {
 	padding-top: 7px;
-	font-family: 'Gretoon';
-	font-size: 15px;
+	font-family: 'VLAngelline';
+	font-size: 20px;
 	color: green;
 }
 .p2 {
