--- a/css/styles.css
+++ b/css/styles.css
@@ -117,7 +117,7 @@ a{
 	padding-bottom: 50px;
 }
 #css301{
-	height: 700px;
+	height: 600px;
 	padding-bottom: 20px;
 }
 #css3{
@@ -159,8 +159,7 @@ a{
 }
 }
 #footer01{
-/*	/*padding-top: 800px;*/
-	/*margin-bottom: 900px;*/*/
+	margin: 0 auto;
 }
 .doraemon {
 	font-family: 'Gretoon';
@@ -173,4 +172,23 @@ a{
 	font-family: 'Gretoon';
 	font-size: 15px;
 	color: green;
+}
+#footer02{
+	margin-left: 380px;
+}
+#last{
+	width: 500px;
+	padding-bottom: 25px;
+	float: right;
+}
+#borderimg { 
+	color: yellow;
+    border: 25px solid transparent;
+    padding-left: 5px;
+/*    padding: 15px;*/
+	padding-top: 15px;
+	padding-bottom: 15px;
+    -webkit-border-image: url('../images/50-.png') 30 stretch; /* Safari 3.1-5 */
+    -o-border-image: url('../images50.png/') 30 stretch; /* Opera 11-12.1 */
+    border-image: url('../images/50.png') 35 stretch;
 }
