--- a/css/styles.css
+++ b/css/styles.css
@@ -136,7 +136,7 @@ a{
 	margin-right: auto;
 }
 #light{
-	margin-left: 420px;
+	margin: 0 auto;
     padding-top: 20px;
     padding-bottom: 30px;
 }
